--- a/src/css/giveme.css
+++ b/src/css/giveme.css
@@ -10,17 +10,31 @@
 }
 .grid_div{
   display: grid;
-  grid-template-columns: 200px 380px;
+  grid-template-columns: 1600px 200px 380px;
   margin-top: 40px;
-  margin-left: 65%;
+  margin-left: 5%;
+}
+.add_box{
+  background-color: #E96D14;
+  color: white;
+  font-size: 32px;
+  font-weight: 500;
+  width:120px;
+  height: 60px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center; /* 수평 가운데 정렬 */
+  align-items: center; /* 수직 가운데 정렬 */
+  cursor: pointer;
+
 }
 .save_box{
   background-color: #E96D14;
   color: white;
   font-size: 32px;
   font-weight: 500;
-  width:150px;
-  height: 70px;
+  width:120px;
+  height: 60px;
   border-radius: 15px;
   display: flex;
   justify-content: center; /* 수평 가운데 정렬 */
@@ -30,14 +44,97 @@
 }
 .commit_box{
   background-color: #E96D14;
-  font-size: 32px;
+  font-size: 28px;
   font-weight: 500;
-  height: 70px;
+  height: 60px;
   color: white;
-  width: 350px;
+  width: 300px;
   border-radius: 15px;
   display: flex;
   justify-content: center; /* 수평 가운데 정렬 */
   align-items: center; /* 수직 가운데 정렬 */
   cursor: pointer;
+}
+.confirm_box{
+  background-color: #E96D14;
+  font-size: 22px;
+  font-weight: 500;
+  height: 40px;
+  color: white;
+  width: 100px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center; /* 수평 가운데 정렬 */
+  align-items: center; /* 수직 가운데 정렬 */
+  cursor: pointer;
+  margin-left: 75%;
+  margin-top: 3%;
+}
+.modal{
+  width: 600px;
+  height: 500px;
+  max-height: 500px; /* 최대 높이 설정 */
+  overflow-y: auto; /* 세로 스크롤 활성화 */
+  position: fixed;
+  top: 20%;
+  left: 36%;
+  background-color: rgba(255,255,255); /* 반투명한 검은 배경 */
+  z-index: 999; /* 모달보다 위에 나타나도록 설정 */
+  border-radius: 10px;
+  border : 1px solid rgb(231, 230, 230);
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out; /* 부드러운 투명도 변화를 위한 트랜지션 */
+}
+/* 스크롤바 */
+.modal::-webkit-scrollbar {
+  width: 10px; /* 스크롤바 너비 */
+}
+
+/* 스크롤바 막대 */
+.modal::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2); /* 스크롤바 색상 */
+  border-radius: 10px; /* 스크롤바 모양 */
+}
+
+/* 스크롤바 트랙 */
+.modal::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.2); /* 스크롤바 트랙 배경색 */
+  border-radius: 10px; /* 스크롤바 트랙 모양 */
+}
+
+.modal.hidden {
+  opacity: 0;
+  pointer-events: none; /* 모달이 숨겨진 상태에서 이벤트를 처리하지 않도록 설정 */
+  transition: opacity 0.3s ease-in-out; /* 부드러운 투명도 변화를 위한 트랜지션 */
+}
+.model_grid{
+  display: grid;
+  grid-template-columns: 120px 300px;
+  margin-bottom: 2.7%;
+  margin-left: 5%;
+}
+.close{
+  width:30px;
+  height: 30px;
+  margin-left: 93%;
+  margin-top: 2%;
+  cursor: pointer;
+}
+.modal_text{
+  font-size: 24px;
+  font-weight: 600;
+}
+.modal_team{
+  border: 1px solid rgb(180, 179, 179);
+  width : 80%;
+  padding: 2%;
+  margin-left: 7%;
+  border-radius: 10px;
+  margin-bottom: 1%;
+}
+.modelTeam_grid{
+  display: grid;
+  grid-template-columns: 120px 280px 50px;
+  margin-bottom: 2.7%;
+  margin-left: 5%;
 }
