--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
@@ -35,4 +36,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+.loading_div{
+  margin-left: 32%;
+  margin-top: 10%;
+}
+.loading_text{
+  font-size: 36px;
+  font-weight: 600;
+}
+.loading{
+  margin-top: 5%;
+  margin-left: 17%;
 }
