--- a/src/css/giveme.css
+++ b/src/css/giveme.css
@@ -138,3 +138,12 @@
   margin-bottom: 2.7%;
   margin-left: 5%;
 }
+
+.vertical-line {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  width: 1px;
+  background: black;
+}
